
Thursday April 9th, 2015
------------------------

    Hook up the simulation so it runs on the server.

    Setup server ticks so we get 240HZ ticks on server running through simulation

    Move the simulation and entities code into shared, "World", eg. world struct

    Everything works from world struct. Don't have globals. Don't make this mistake.

    Make all code for setting up the world and pumping it shared in world.h


Tuesday April 7th, 2015
-----------------------

    Cleaned up the C++ bullshit in shader loading code


Sunday April 5th, 2015
----------------------

    Bring across the rest of the cube render into render.cpp

    Most brought across. 

    Convert the last glm::ortho to vectorial to remove that POS library.


Saturday March 28th, 2015
-------------------------

    Sketch out initial render.h

    Plan out what to bring across

    Seems that at minimum I really only need the load shader, unload shader.

    Don't really need the manager.


Friday March 27th, 2015
-----------------------

    Hook up player velocity tilt.

    Hook up player push bobbing etc.

    Hook up player push/pull on other cubes entities in the world.

    Game logic for processing player inputs and controlling the sim is now ported across.


Thursday March 26th, 2015
-------------------------

    Brought across update authority into entity.cpp (commented out)

    Bring across the game code into game.h. This is the code that takes player input and applies
    forces and so on to cubes. Structure this such that it is easily called within the context
    of client side prediction rollback.

    Ensure that game code doesn't talk to ODE directly. goes through physics.h

    Stopped work on this as more physics sim work needs to be done first.

    Extended base entity to have a physics index.

    Extended cube entity create to actually create a physics object and set "physics_index" in the object.
