@@ -1,4 +1,10 @@
 
+Saturday April 11th, 2015
+-------------------------
+
+    Setup the client so it also creates a world and updates it with ticks.
+
+
 Thursday April 9th, 2015
 ------------------------
 
